<resources>
    <string name="app_name">Event Reminder</string>


    <string name="newEvent">Add New Event</string>
    <string name="checkEvents">Check Events</string>
    <string name="sendInv">Send Event Invitations</string>
    <string name="checkInv">Check Event Invitations</string>
    <string name="next">Next Event</string>

    <string name="textName">Enter Event Name</string>
    <string name="textDate">Enter Event Date</string>
    <string name="textTime">Enter Event Time</string>
    <string name="confirm">Create New Event</string>
    <string name="recip">Enter Recipient Name</string>
    <string name="back">Return to Home</string>
    <string name="status1">New Event Created</string>
    <string name="status2">Invalid Date</string>
    <string name="status3">Invalid Time</string>

</resources>
